[gd_scene load_steps=20 format=3 uid="uid://bv8q5j8bqi7vd"]

[ext_resource type="Script" path="res://scenes/ui/meta_upgrade_card.gd" id="1_7o1hi"]
[ext_resource type="PackedScene" uid="uid://c3adp2e1nlw3e" path="res://scenes/component/random_stream_player_component/random_stream_player_component.tscn" id="2_f4uoj"]
[ext_resource type="AudioStream" uid="uid://dr0cone7prti4" path="res://assets/audio/switch1.ogg" id="3_6t1pr"]
[ext_resource type="AudioStream" uid="uid://ulc4vujbdofh" path="res://assets/audio/switch2.ogg" id="4_1q6ff"]
[ext_resource type="AudioStream" uid="uid://be3epvje6rtfa" path="res://assets/audio/switch3.ogg" id="5_60xpe"]
[ext_resource type="AudioStream" uid="uid://cq1rt5mydnvdu" path="res://assets/audio/switch4.ogg" id="6_hfby8"]
[ext_resource type="AudioStream" uid="uid://ch2if41bg4q8" path="res://assets/audio/switch5.ogg" id="7_7bide"]
[ext_resource type="AudioStream" uid="uid://cql1su4we2lox" path="res://assets/audio/switch6.ogg" id="8_b3xq0"]
[ext_resource type="AudioStream" uid="uid://bkyrjvg1y770w" path="res://assets/audio/switch7.ogg" id="9_qht3n"]
[ext_resource type="AudioStream" uid="uid://cw07jgkls06kx" path="res://assets/audio/switch8.ogg" id="10_3p1qe"]
[ext_resource type="AudioStream" uid="uid://1d4qyht3hmvm" path="res://assets/audio/switch9.ogg" id="11_1n6l1"]
[ext_resource type="AudioStream" uid="uid://dm1jxhyjoe58k" path="res://assets/audio/switch10.ogg" id="12_vq8gt"]
[ext_resource type="Texture2D" uid="uid://b0be4blaq64ik" path="res://scenes/ability/axe_ability/axe.png" id="13_vilpb"]
[ext_resource type="Texture2D" uid="uid://fgo6n4almj22" path="res://scenes/game_object/experience_vial/experience_vial.png" id="14_jlkha"]
[ext_resource type="PackedScene" uid="uid://cv2u42bacuout" path="res://scenes/component/button_click_player_component/button_click_player_component.tscn" id="15_npo7h"]

[sub_resource type="Animation" id="Animation_qilo4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vxpcc"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.4),
"transitions": PackedFloat32Array(2, 0.203063, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ClickPlayerComponent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0emkn"]
_data = {
"RESET": SubResource("Animation_qilo4"),
"selected": SubResource("Animation_vxpcc")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_proqq"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.458824, 0.890196, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="MetaUpgradeCard" type="PanelContainer" groups=["meta_upgrade_card"]]
custom_minimum_size = Vector2(150, 0)
offset_right = 142.0
offset_bottom = 140.0
pivot_offset = Vector2(71, 70)
script = ExtResource("1_7o1hi")

[node name="ClickPlayerComponent" parent="." instance=ExtResource("2_f4uoj")]
streams = Array[AudioStream]([ExtResource("3_6t1pr"), ExtResource("4_1q6ff"), ExtResource("5_60xpe"), ExtResource("6_hfby8"), ExtResource("7_7bide"), ExtResource("8_b3xq0"), ExtResource("9_qht3n"), ExtResource("10_3p1qe"), ExtResource("11_1n6l1"), ExtResource("12_vq8gt")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0emkn")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 8
alignment = 1

[node name="AbilityIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("13_vilpb")
stretch_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"BlueOutlineLabel"
text = "Sword Quickness"
vertical_alignment = 2
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 0

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "Increases Sword attack rate by 10%."
vertical_alignment = 2
autowrap_mode = 2

[node name="ProgressContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ProgressContainer"]
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer/ProgressContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_type_variation = &"BlueOutlineLabel"
text = "50/200"

[node name="CountLabel" type="Label" parent="MarginContainer/VBoxContainer/ProgressContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BlueOutlineLabel"
text = "x0"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ProgressContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/ProgressContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_proqq")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/ProgressContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="ExperienceTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/ProgressContainer/MarginContainer/Control"]
layout_mode = 2
offset_left = -5.0
offset_top = -5.0
offset_right = 11.0
offset_bottom = 11.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("14_jlkha")

[node name="PurchaseButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Purchase"

[node name="ButtonClickPlayerComponent" parent="MarginContainer/VBoxContainer/PurchaseButton" instance=ExtResource("15_npo7h")]
